add: get expenses in period time
