# services/expenses/handler.go
@@ -2,6 +2,7 @@ package expenses
 
 import (
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/ppeymann/accounting.git"
@@ -24,6 +25,7 @@ func NewHandler(service services.ExpensesService, s *server.Server) services.Exp
 		{
 			group.POST("/create", handler.Create)
 			group.GET("/get_all", handler.GetAll)
+			group.GET("/get_period_time", handler.GetPeriodTime)
 		}
 	}
 
@@ -74,5 +76,74 @@ func (h *handler) GetAll(ctx *gin.Context) {
 
 	// call service
 	result := h.service.GetAll(ctx)
+	ctx.JSON(result.Status, result)
+}
+
+// GetPeriodTime is handler for get expenses from specific date to specific date
+//
+// @BasePath			/api/v1/expenses/get_period_time
+// @Summary				get expenses
+// @Description			get expenses in period time
+// @Tags				expenses
+// @Accept				json
+// @Produce				json
+//
+// @Param				fromYear	query	int	true	"start year"
+// @Param				fromMonth	query	int	true	"start month"
+// @Param				toYear		query	int	true	"end year"
+// @Param				toMonth		query	int	true	"end month"
+// @Success				200		{object}	accounting.BaseResult{result=[]services.ExpensesEntity}	"always returns status 200 but body contains errors"
+// @Router				/expenses/get_period_time	[get]
+// @Security			Authenticate Bearer
+func (h *handler) GetPeriodTime(ctx *gin.Context) {
+	fromYearStr := ctx.Query("fromYear")
+	fromMonthStr := ctx.Query("fromMonth")
+	toYearStr := ctx.Query("toYear")
+	toMonthStr := ctx.Query("toMonth")
+
+	fromYear, err := strconv.Atoi(fromYearStr)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, accounting.BaseResult{
+			Errors: []string{"Invalid fromYear parameter"},
+		})
+		return
+	}
+
+	fromMonth, err := strconv.Atoi(fromMonthStr)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, accounting.BaseResult{
+			Errors: []string{"Invalid fromMonth parameter"},
+		})
+		return
+	}
+
+	toYear, err := strconv.Atoi(toYearStr)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, accounting.BaseResult{
+			Errors: []string{"Invalid toYear parameter"},
+		})
+		return
+	}
+
+	toMonth, err := strconv.Atoi(toMonthStr)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, accounting.BaseResult{
+			Errors: []string{"Invalid toMonth parameter"},
+		})
+		return
+	}
+
+	input := &services.PeriodTimeInput{
+		From: services.PeriodDateAndTime{
+			Year:  fromYear,
+			Month: fromMonth,
+		},
+		To: services.PeriodDateAndTime{
+			Year:  toYear,
+			Month: toMonth,
+		},
+	}
+
+	result := h.service.GetPeriodTime(input, ctx)
 	ctx.JSON(result.Status, result)
 }
